testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToImportOfFunctionExpression.errors.txt
MC.js(6,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
MW.js(8,10): error TS2339: Property 'compiler' does not exist on type 'MW'.
MW.js(12,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== MC.js (1 errors) ====
    const MW = require("./MW");
    
    /** @typedef {number} Meyerhauser */
    
    /** @class */
    module.exports = function MC() {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        /** @type {any} */
        var x = {}
        return new MW(x);
    };
    
==== MW.js (2 errors) ====
    /** @typedef {import("./MC")} MC */
    
    class MW {
      /**
       * @param {MC} compiler the compiler
       */
      constructor(compiler) {
        this.compiler = compiler;
             ~~~~~~~~
!!! error TS2339: Property 'compiler' does not exist on type 'MW'.
      }
    }
    
    module.exports = MW;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    